--- a/angular-2/drugstore/src/app/app.component.scss
+++ b/angular-2/drugstore/src/app/app.component.scss
@@ -1,13 +1,13 @@
 // 1/1. Használd a már létrehozott colors modult!
-
+@use '../assets/modules/colors' as *;
 // 1/2. Használd a már létrehozott mixins modult!
-
+@use '../assets/modules/mixins' as *;
 
 .container {
   align-items: center;
   // 2. Az animált tacskó hátterére állítsd be
   // a modul segítségével a következő színt: #d4e6ff
-
+  background-color: #d4e6ff;
   display: flex;
   justify-content: center;
   margin: 0;
@@ -22,6 +22,11 @@
     animation-iteration-count: infinite;
     animation-timing-function: ease-in;
   }*/
+  &-decoration, &-sound {
+    animation-duration: 3s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in;
+  }
 }
 
 .sausage-dog-animation {
